--- a/codigo-fonte/web-barao/src/app/app.component.html
+++ b/codigo-fonte/web-barao/src/app/app.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-dark bg-dark mb-4">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/">Barão Lava Jato</a> </div>
-</nav>
+<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+<main class="flex-grow-1 py-4">
+  <router-outlet></router-outlet>
+</main>
+
+<app-rodape></app-rodape>
