--- a/codigo-fonte/web-barao/src/app/pages/produto-detalhe/produto-detalhe.component.html
+++ b/codigo-fonte/web-barao/src/app/pages/produto-detalhe/produto-detalhe.component.html
@@ -6,16 +6,14 @@
 
   <div class="row">
     <div class="col-md-6">
-      <div class="bg-secondary rounded d-flex align-items-center justify-content-center text-white" style="height: 400px;">
-        <i class="bi bi-image" style="font-size: 5rem;"></i>
-      </div>
+      <img [src]="produto.linkFoto" class="img-fluid rounded shadow-sm" [alt]="produto.nome" style="width: 100%; height: 400px; object-fit: cover;">
     </div>
 
     <div class="col-md-6">
       <h1 class="display-5 fw-bold">{{ produto.nome }}</h1>
       <h3 class="text-primary my-3">R$ {{ produto.preco | number:'1.2-2' }}</h3>
 
-      <p class="lead text-muted">{{ produto.descricao }}</p>
+      <p class="lead text-muted">{{ produto.detalhe }}</p>
 
       <hr class="my-4">
 
