--- a/codigo-fonte/admin-barao/src/app/componentes/dashboard/dashboard.component.html
+++ b/codigo-fonte/admin-barao/src/app/componentes/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-<app-navbar></app-navbar>
 
+<app-navbar></app-navbar>
+<app-graficovendas></app-graficovendas>
 <div class="container-fluid mt-4">
   <div class="row mb-4">
     <div class="col-12">
