--- a/codigo-fonte/admin-barao/src/app/componentes/clientes/clientes.component.html
+++ b/codigo-fonte/admin-barao/src/app/componentes/clientes/clientes.component.html
@@ -1,5 +1,3 @@
-<app-navbar></app-navbar>
-
 <div class="container-fluid mt-4 mb-5">
   <div class="row mb-3 border-bottom pb-2">
     <div class="col-12">
@@ -20,7 +18,7 @@
       <button class="btn btn-primary" (click)="buscarPorPalavraChave()"><i class="fas fa-search"></i> Buscar</button>
     </div>
     <div class="col-md-3 text-end mt-3 mt-md-0">
-      <button class="btn btn-success fw-bold" (click)="adicionarNovoCliente()"><i class="fas fa-user-plus me-1"></i> Novo Cliente</button>
+      <button class="btn btn-warning fw-bold text-dark shadow-sm" (click)="adicionarNovoCliente()"><i class="fas fa-user-plus me-1"></i> Novo Cliente</button>
     </div>
   </div>
 
