--- a/codigo-fonte/admin-barao/src/app/componentes/usuarios/usuarios.component.html
+++ b/codigo-fonte/admin-barao/src/app/componentes/usuarios/usuarios.component.html
@@ -1,12 +1,10 @@
-<app-navbar></app-navbar>
-
 <div class="container mt-4 mb-5">
   <div class="row mb-4 border-bottom pb-2 align-items-center">
     <div class="col-md-8">
       <h3 class="fw-bold m-0"><i class="fas fa-users-cog me-2 text-primary"></i> Gerenciar Usuários</h3>
     </div>
     <div class="col-md-4 text-md-end mt-3 mt-md-0">
-      <a class="btn btn-primary fw-bold" routerLink="/editorusuario/new"><i class="fas fa-plus me-1"></i> Novo Usuário</a>
+      <a class="btn btn-warning fw-bold text-dark shadow-sm" routerLink="/editorusuario/new"><i class="fas fa-plus me-1"></i> Novo Usuário</a>
     </div>
   </div>
 
